add intro and bars

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -41,7 +41,7 @@
       <figure class="no-gutters-phone">
         <!--<figcaption class="figcaption"><figcredit style='font-family:benton-sans'>JOSH KAHEN | FILE</figcaption>-->
       <div class='story'>
-      <p align='center'>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p align='center'>For the paper’s 150th anniversary, we thought it’d be fitting to make a timeline, so we did. We scoured more than 100 years of <a href=https://guides.lib.berkeley.edu/find-daily-cal-articles>digital archives</a> to highlight notable events from campus and Daily Cal history. From the very first game at Memorial Stadium to the Milo Yiannopoulos protests, we compiled headlines from nearly every decade since the Daily Cal was founded in 1871. So sit back, relax and take a scroll through history.</p>
         </div>
       {% include "partials/timeline.html" %}
     <div class="nerd-box">
