--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -34,12 +34,13 @@
     </head>
 
       {% include "partials/progress.html" %}
-    <body>
+    <body style="background-image: url('images/bg.png')";>
 
       {% include "partials/_nav.html" %}
       {% include "partials/_header.html" %}
       <figure class="no-gutters-phone">
-        <!--<figcaption class="figcaption"><figcredit style='font-family:benton-sans'>JOSH KAHEN | FILE</figcaption>-->
+        <img src="images/cover.jpg">
+        <figcaption class="figcaption"><figcredit style='font-family:benton-sans'>DAVID MCALLISTER | FILE</figcaption>
       <div class='story'>
         <p align='center'>For the paper’s 150th anniversary, we thought it’d be fitting to make a timeline, so we did. We scoured more than 100 years of <a href=https://guides.lib.berkeley.edu/find-daily-cal-articles>digital archives</a> to highlight notable events from campus and Daily Cal history. From the very first game at Memorial Stadium to the Milo Yiannopoulos protests, we compiled headlines from nearly every decade since the Daily Cal was founded in 1871. So sit back, relax and take a scroll through history.</p>
         </div>
