--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -119,9 +119,14 @@ h4 {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 750px) {
   svg {
     zoom: 0.7;
+  }
+}
+@media screen and (max-width: 600px) {
+  svg {
+    zoom: 0.6;
   }
 }
 
@@ -133,7 +138,7 @@ h4 {
 
 @media screen and (max-width: 400px) {
   svg {
-    zoom: 0.5;
+    zoom: 0.4;
   }
 }
 //@media screen and (max-width: 1500px) {
