--- a/src/scss/_nerd-box.scss
+++ b/src/scss/_nerd-box.scss
@@ -1,6 +1,6 @@
 
 .nerd-box {
-	background: rgba($dc-blue, 0.1);
+	background: #e9edf0;
 	padding: 20px;
 	max-width: 600px;
 	margin: 0 auto 30px auto;
