--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,16 @@
 
 <!DOCTYPE html>
 <html>
+<style>
+body {
+  width: 100vw;
+  background-image: url('images/bg.png');
+  background-position: center;
+  background-repeat: repeat;
+  background-size: 100%;
+  background-attachment: fixed;
+}
+</style>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -34,7 +44,7 @@
     </head>
 
       {% include "partials/progress.html" %}
-    <body style="background-image: url('images/bg.png')";>
+    <body>
 
       {% include "partials/_nav.html" %}
       {% include "partials/_header.html" %}
@@ -51,7 +61,7 @@
 <p align='left'>
 </p>
 <p>
-  Michelle Li contributed to this project. This project is open-source on <a href="https://github.com/dailycal-projects/timeline" target="_blank"> Github</a>.
+  Michelle Li contributed to this project. This project is open-source on <a href="https://github.com/dailycal-projects/timeline_150" target="_blank"> Github</a>.
 </p>
 {% include "partials/_footer.html" %}
 <script type="text/javascript">window.tweetText = "{{META.share.twitter.share_tweet}}";</script>
