--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -10,9 +10,9 @@
         <p>
             By <span class="byline"><a href="https://www.dailycal.org/author/alexzhao/" style="text-decoration: none" target="_blank">Alex Zhao</a>, 
                 <a href="https://www.dailycal.org/author/malviar/" style="text-decoration: none" target="_blank">Maia Alviar</a>, 
-                <a href="https://www.dailycal.org/author/jocelynhuang/" style="text-decoration: none" target="_blank">Jocelyn Huang</a>, and
+                <a href="https://www.dailycal.org/author/jocelynhuang/" style="text-decoration: none" target="_blank">Jocelyn Huang</a> and
                 <a href="https://www.dailycal.org/author/jharris/" style="text-decoration: none" target="_blank">Jordan Harris</a>
-            </span> <br /> <span class="timestamp"><time datetime="2020-07-24T08:00-0800">JUNE 5, 2021</time></span>
+            </span> <br /> <span class="timestamp"><time datetime="2020-07-24T08:00-0800">JUNE 4, 2021</time></span>
             </br>
             </br>
         </p>
